--- a/project1/index.html
+++ b/project1/index.html
@@ -21,11 +21,10 @@
         <div class="card-action">
             
             <div>
+                <!-- <label for="filter">Filter Task:</label>  -->
+                <input type="text" name="filter" id="filter" placeholder="Filter Task">
                 <h3 id="task-title">Tasks</h3>
-                <hr>
-                <!-- <label for="task">New Task</label> -->
-                <!-- <input type="text" name="task" id="task" > -->
-                
+                <hr>    
             </div>
             <ul class="collection">
             </ul>
