--- a/project2/index.html
+++ b/project2/index.html
@@ -8,26 +8,25 @@
 </head>
 <body>
     <div class="container">
-        <form>
-            <h1>Loan Calculator</h1>
-            <div id="one">
-                
-                <input type="text" id="money" placeholder="$ Loan Amount">
+        <form action="#" id="form">
+            <div class="input-data">
+                <h1>Loan Calculator</h1>
+                <input type="text" class="money input" placeholder="$ Loan Amount">
+                <input type="text" class="interest input" placeholder="% Annual Interest">
+                <input type="text" class="yearText input" placeholder="Repayment Years">
+                <div class="buttons">
+                    <input type="submit" value="Calculate" class="calbtn">
+                    <input type="button" value="Clear Data" class="clearbtn">
+                </div>
             </div>
-            <div>
-                
-                <input type="text" id="percent" placeholder="% Annual Interest">
-            </div>
-            <input type="text" id="yearText" placeholder="Repayment Years">
-            <input type="submit" value="Calculate" id="calbtn">
-            <!-- <div class="img">
+             <div class="loading">
                 <img src="img/loading.gif" alt="">
-            </div> -->
+            </div>
             <div class="result-page">
-                <h3>Result</h3>
-                <span>Monthly Payment:</span><input type="text">
-                <span>Toptaly Payment:</span><input type="text">
-                <span>Interest Rate:</span><input type="text">
+                    <h3>Result</h3>
+                    <div>Monthly Payment:<input type="text" class="resultMonthlypayment"></div>
+                    <div>Total Payment:<input type="text" class="resultTotalpayment"></div>
+                    <div>Interest Rate:<input type="text" class="resultInterestRate"></div>
             </div>
         </form>
     </div>
