--- a/OOP_project/index.html
+++ b/OOP_project/index.html
@@ -36,13 +36,14 @@
                     <th>ISBN#</th>
                     <th></th>
                 </tr>
-                <tr class="data">    
+                <tr>    
                 </tr>
             </table>
     </div>
 
 
     <!-- <script src="script.js"></script> -->
-    <script src="script2.js"></script>
+    <!-- <script src="script2.js"></script> -->
+    <script src="scriptES6.js"></script>
 </body>
 </html>
