--- a/Asyn&Ajax&fetch/HTTP_Library&callback/index2.html
+++ b/Asyn&Ajax&fetch/HTTP_Library&callback/index2.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     
-
-    <script src="promise.js"></script>
+    <script src="http2.js"></script>
+    <script src="app2.js"></script>
 </body>
 </html>
