--- a/Asyn&Ajax&fetch/HTTP_Library&callback/index3.html
+++ b/Asyn&Ajax&fetch/HTTP_Library&callback/index3.html
@@ -9,6 +9,7 @@
 <body>
     
 
-    <script src="promise.js"></script>
+    <script src="http3.js"></script>
+    <script src="app3.js"></script>
 </body>
 </html>
