--- a/Tracalorie_Project/index.html
+++ b/Tracalorie_Project/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="calories">
                 <label for="cal">calories</label>
-                <input type="text" id="cal">
+                <input type="number" id="cal">
             </div>
             <!-- <input type="submit" value="+ Add Meal" class="btn"> -->
             <div class="buttons">
@@ -45,15 +45,15 @@
             </div>
         </form>
         <div class="calculate">
-            <h1>Total Calories: <span>0</span></h1>
+            <h1>Total Calories: <span class="showCal">0</span></h1>
         </div> 
-        <!-- <div class="collection">   
+        <div class="collection">   
             <ul class="display">
-                <li>Cookies: <span>500</span><a href="#"><i class="fa fa-edit"></a></i></li>
+                <!-- <li>Cookies: <span>500</span><a href="#"><i class="fa fa-edit"></a></i></li>
                 <li>Candy: <span>300</span><a href="#"><i class="fa fa-edit"></a></i></li>
-                <li>Banana: <span>100</span><a href="#"><i class="fa fa-edit"></a></i></li>
+                <li>Banana: <span>100</span><a href="#"><i class="fa fa-edit"></a></i></li> -->
             </ul>
-        </div> -->
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
