--- a/Tracalorie_Project/index.html
+++ b/Tracalorie_Project/index.html
@@ -33,12 +33,12 @@
                 <div class="btn add">
                     <a href="#"><i class="fa fa-plus" ></i> Add Meal</a>
                 </div>
-                <!-- <div class="btn edit">
+                <div class="btn edit">
                     <a href="#"><i class="fa fa-edit"></i> Edit Meal</a>
                 </div>
                 <div class="btn del">
                     <a href="#"><i class="fa fa-trash"></i> Del Meal</a>
-                </div> -->
+                </div>
                 <div class="btn back">
                     <a href="#"><i class="fa fa-chevron-circle-left"></i> Back</a>
                 </div>
