--- a/Tracalorie_Project/index.html
+++ b/Tracalorie_Project/index.html
@@ -14,6 +14,9 @@
         <div class="clear">
             <a href="#">Clear All</a>
         </div>
+        <div class="time">
+            <p></p>
+        </div>
     </div>
     
     <div class="container">
